--- a/main.html
+++ b/main.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Quiz Question</title>
+    <style>
+        blockquote {
+            max-width: 600px;
+            margin: 10px;
+            padding: 15px;
+            border-left: 8px solid green;
+            background-color: #f8fffe;
+            font-weight: bold;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h2>Question:</h2>
+    <p>What is the capital of India?</p>
+    <form>
+        <input type="radio" name="answer" value="New Delhi"> New Delhi<br>
+        <input type="radio" name="answer" value="Mumbai"> Mumbai<br>
+    </form>
+    
+    <blockquote>
+        New Delhi is the capital of India and an administrative district of NCT Delhi. (Reference: Wikipedia)
+    </blockquote>
 </body>
-
 </html>
