--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
     </form>
     
     <blockquote>
-        New Delhi is the capital of India and an administrative district of NCT Delhi. (Reference: Wikipedia)
+        New Delhi is the capital of India and an administrative district of NCT Delhi.
     </blockquote>
 </body>
 </html>
