--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
         <input type="radio" name="answer" value="Mumbai"> Mumbai<br>
     </form>
     
-    <blockquote>
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
         New Delhi is the capital of India and an administrative district of NCT Delhi.
     </blockquote>
 </body>
